// Jest Snapshot v1, https://goo.gl/fbAQLP

exports[`infobar actions execute action fail 1`] = `
[
  {
    "closeOnNext": true,
    "dismissAfter": 0,
    "message": "Executing action...",
    "status": "loading",
    "type": "NOTIFY-MOCK",
  },
  {
    "callback": [MockFunction],
    "data": {
      "action_id": "shopifyRefundShippingCostOfOrder-34-5-f086fd149f679a11cf4d5378daa3a994cd70689a",
      "action_label": undefined,
      "action_name": "shopifyRefundShippingCostOfOrder",
      "integration_id": "5",
      "payload": {
        "order_id": 4194477515,
      },
      "ticket_id": "1",
      "user_id": "34",
    },
    "id": "shopifyRefundShippingCostOfOrder-34-5-f086fd149f679a11cf4d5378daa3a994cd70689a",
    "type": "EXECUTE_ACTION_START",
  },
  {
    "data": {
      "action_id": "shopifyRefundShippingCostOfOrder-34-5-f086fd149f679a11cf4d5378daa3a994cd70689a",
      "action_label": undefined,
      "action_name": "shopifyRefundShippingCostOfOrder",
      "integration_id": "5",
      "payload": {
        "order_id": 4194477515,
      },
      "ticket_id": "1",
      "user_id": "34",
    },
    "error": [Error: Request failed with status code 400],
    "id": "shopifyRefundShippingCostOfOrder-34-5-f086fd149f679a11cf4d5378daa3a994cd70689a",
    "reason": "Failed to execute action shopifyRefundShippingCostOfOrder on customer #34 for integration 5",
    "type": "EXECUTE_ACTION_ERROR",
  },
]
`;

exports[`infobar actions execute action success 1`] = `
[
  {
    "closeOnNext": true,
    "dismissAfter": 0,
    "message": "Executing action...",
    "status": "loading",
    "type": "NOTIFY-MOCK",
  },
  {
    "callback": [MockFunction],
    "data": {
      "action_id": "shopifyRefundShippingCostOfOrder-34-5-f086fd149f679a11cf4d5378daa3a994cd70689a",
      "action_label": undefined,
      "action_name": "shopifyRefundShippingCostOfOrder",
      "integration_id": "5",
      "payload": {
        "order_id": 4194477515,
      },
      "ticket_id": "1",
      "user_id": "34",
    },
    "id": "shopifyRefundShippingCostOfOrder-34-5-f086fd149f679a11cf4d5378daa3a994cd70689a",
    "type": "EXECUTE_ACTION_START",
  },
]
`;

exports[`infobar actions handle executed action display error 1`] = `
[
  {
    "buttons": [
      {
        "name": "Review",
        "onClick": [Function],
        "primary": true,
      },
    ],
    "dismissAfter": 0,
    "message": "No way",
    "status": "error",
    "title": "Something went wrong on your last action 😞",
    "type": "NOTIFY-MOCK",
  },
  {
    "data": {
      "action_id": "someId",
      "msg": "[SHOPIFY] [full-refund] No way",
      "payload": {},
      "status": "error",
    },
    "id": "someId",
    "type": "EXECUTE_ACTION_ERROR",
  },
]
`;

exports[`infobar actions handle executed action display error from ticket currently on 1`] = `
[
  {
    "buttons": [
      {
        "name": "Review",
        "onClick": [Function],
        "primary": true,
      },
    ],
    "dismissAfter": 0,
    "message": "No way",
    "status": "error",
    "title": "Something went wrong on your last action 😞",
    "type": "NOTIFY-MOCK",
  },
  {
    "data": {
      "action_id": "someId",
      "msg": "[SHOPIFY] [full-refund] No way",
      "payload": {},
      "status": "error",
      "ticket_id": "1",
    },
    "id": "someId",
    "type": "EXECUTE_ACTION_ERROR",
  },
]
`;

exports[`infobar actions handle executed action display error from ticket not currently on 1`] = `
[
  {
    "buttons": [
      {
        "name": "Review",
        "onClick": [Function],
        "primary": true,
      },
    ],
    "dismissAfter": 0,
    "message": "No way",
    "status": "error",
    "title": "Something went wrong on your last action 😞",
    "type": "NOTIFY-MOCK",
  },
  {
    "data": {
      "action_id": "someId",
      "msg": "[SHOPIFY] [full-refund] No way",
      "payload": {},
      "status": "error",
      "ticket_id": "2",
    },
    "id": "someId",
    "type": "EXECUTE_ACTION_ERROR",
  },
]
`;

exports[`infobar actions handle executed action success 1`] = `
[
  {
    "status": "success",
    "title": "Action successfully executed",
    "type": "NOTIFY-MOCK",
  },
  {
    "data": {
      "action_id": "someId",
      "payload": {},
      "status": "success",
    },
    "id": "someId",
    "type": "EXECUTE_ACTION_SUCCESS",
  },
]
`;

exports[`infobar actions search should dispatch search results on success 1`] = `
[
  {
    "type": "SEARCH_CUSTOMERS_START",
  },
  {
    "resp": {
      "data": [
        {
          "id": 1,
          "name": "alex",
        },
      ],
    },
    "type": "SEARCH_CUSTOMERS_SUCCESS",
  },
]
`;

exports[`infobar actions search should not dispatch results when cancelling the search 1`] = `
[
  {
    "type": "SEARCH_CUSTOMERS_START",
  },
]
`;

exports[`infobar actions similarCustomer should reject on any error 1`] = `
[
  {
    "type": "SEARCH_SIMILAR_CUSTOMER_START",
  },
  {
    "reason": "Failed to search for similar customers. Please try again...",
    "type": "SEARCH_SIMILAR_CUSTOMER_ERROR",
  },
]
`;

exports[`infobar actions similarCustomer should resolve with a similar customer 1`] = `
[
  {
    "type": "SEARCH_SIMILAR_CUSTOMER_START",
  },
  {
    "customer": {
      "id": 1,
      "name": "alex",
    },
    "type": "SEARCH_SIMILAR_CUSTOMER_SUCCESS",
  },
]
`;
